syntax = "proto3";

option csharp_namespace = "Caiju.TeenKom.Blitzjob.AppServer.Protos.Client";

package people;

import "google/protobuf/timestamp.proto";
import "shared/default.proto";

service People{
	rpc GetCoach (default.DefaultReq) returns (GetCoachRes);
	rpc GetCustomer (default.DefaultReq) returns (GetCustomerRes);
}

message GetCustomerRes{
	CustomerRes customer = 1;
}

message GetCoachRes{
	CoachRes coach = 1;
}

message PeopleBase{
	int32 id = 1;
	string first_name = 2;
	string last_name = 3;
	enum PhoneType {
		MOBILE = 0;
		HOME = 1;
		WORK = 2;
	}
	message PhoneNumber{
		string number = 1;
		PhoneType type = 2;
	}
	repeated PhoneNumber phones = 4;
}

message CoachRes{
	PeopleBase people_base = 1;
	google.protobuf.Timestamp coach_time_reachable_from = 2;
	google.protobuf.Timestamp coach_time_reachable_to = 3;
}

message BlitzjobberRes{
	PeopleBase people_base = 1;
}

message CustomerRes{
	PeopleBase people_base = 1;
}

message AdminRes{
	PeopleBase people_base = 1;
}

